# hashcode-2020

./: .gitignore  README.md  b_read_on.txt.out  c_incunabula.txt.out  d_tough_choices.txt.out  e_so_many_books.txt.out  f_libraries_of_the_world.txt.out  index.js  max.cpp  optimistic-solver.js  solution_a.out  solution_c.out  solution_e.out  solutions.txt  utils.js
cpp/: CMakeLists.txt  main.cpp  pizza.hpp  problem.cpp  solution.cpp  solver.cpp  solvers.cmake
cpp/solvers/: max.cpp  shuffle.cpp
js/: index.js  max.js
outputs/: b_small.out  e_also_big.out
practice/: greedy-solver.js  index.js  utils.js
practice/inputs/: d_quite_big.in.out
practice/outputs/: a_example.out  c_medium.out  d_quite_big.out
practice/solutions/anton/1/: a_example.in.out  b_small.in.out  c_medium.in.out  d_quite_big.in.out
practice/solutions/anton/best/: d_quite_big.in.out
solutions/1/: b_small.out  c_medium.out  d_quite_big.out  e_also_big.out
solutions/2/: c_medium.out  d_quite_big.out  e_also_big.out
solutions/3/: a_example.out  b_small.out  c_medium.out  d_quite_big.out  e_also_big.out
solutions/4/: d_quite_big.out  e_also_big.out
solutions/5/: c_medium.out  d_quite_big.out  e_also_big.out
solutions/6/: c_medium.out  d_quite_big.out  e_also_big.out
solutions/anton/1/: e_also_big.in.out
solutions/anton/best/: d_quite_big.in.out
solutions/max/: solution_d.txt  solution_e.txt
